--- a/application/sources/ak/history.txt
+++ b/application/sources/ak/history.txt
@@ -10,3 +10,6 @@ version 1.1: 12/02/2017
 version 1.2: 01/08/2017
 	+ dynamic message pool
 	+ update table state machine
+
+version 1.3: 19/12/2017
+	+ add ak.cfg.mk file
